projects/compiler/test/parser/binary_error_assign_op.out
Error at %FILE_NAME%:1:7
Unexpected token '+=':
  |  a * a += 1 + 2
           ^